@@ -3,7 +3,7 @@ envlist=py26,py32,py33,py27,py26,py26-old,py33-old
 
 [testenv]
 changedir=testing
-deps=pytest>=2.4.2
+deps=pytest>=2.5.1
 commands= py.test --junitxml={envlogdir}/junit-{envname}.xml []
 
 [testenv:py27]
